--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@stripe/react-stripe-js": "^2.4.0",
+    "@tanstack/react-query": "^5.8.9",
+    "axios": "^1.6.2",
     "daisyui": "^4.4.10",
     "firebase": "^10.6.0",
     "flowbite-react": "^0.7.0",
@@ -20,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.19.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
