--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.19.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
